<resources>
    <string name="app_name">Countries</string>
    <string name="title_countries">Countries</string>
    <string name="title_favorites">Favorites</string>
    <string name="title_settings">Settings</string>
    <string name="title_add">Add a Country</string>
    <string name="title_details">Details of Country</string>
    <string name="title_country_name"><u>Country Name</u></string>
    <string name="title_country_capital"><u>Country Capital</u></string>
    <string name="title_country_continent"><u>Country Continent</u></string>
    <string name="title_my_favorites"><u>Favorite Country</u></string>
    <string name="made_by">Made by Luiz Monteiro</string>

</resources>
