<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_countries">

    <fragment
        android:id="@+id/navigation_countries"
        android:name="br.com.luiz.countries.ui.countries.CountriesFragment"
        android:label="@string/title_countries"
        tools:layout="@layout/fragment_countries" />

    <fragment
        android:id="@+id/navigation_favorites"
        android:name="br.com.luiz.countries.ui.myfavorites.FavoritesFragment"
        android:label="@string/title_favorites"
        tools:layout="@layout/fragment_my_favorites" />

    <fragment
        android:id="@+id/navigation_settings"
        android:name="br.com.luiz.countries.ui.configurations.ConfigurationFragment"
        android:label="@string/title_settings"
        tools:layout="@layout/fragment_config" />
</navigation>